--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -1,17 +1,36 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Fotózás link</h5>
 
-  <ng-container *ngIf="kikuldesikodidopontja !== ''">
-    <p>Korábban már készült fotózás link ehhez az irathoz ({{kikuldesikodidopontja}})!</p>
+  <button (click)="doUj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+    Új fotózás link
+  </button>
+  <button [disabled]="link === ''" (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+    Fotózás link törlése
+  </button>
+
+  <ng-container *ngIf="link !== ''">
     <div class="form-group">
       <textarea class="form-control" rows="3" id="regilink" readonly="true" [(ngModel)]="link"></textarea>
+      {{kikuldesikodidopontja}}
     </div>
   </ng-container>
 
-  <button (click)="fotozaslink()"
-          class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-    Új fotózás link
-  </button>
+  <ng-container *ngIf="egymode === 3">
+    <div [@rowanimation]>
+      <h5>Új fotózás link</h5>
+      <p>Ha új fotózás linket készít, a régi érvényessége megszűnik. Biztos benne?</p>
+      <div class="row no-gutters" style="margin-bottom: 10px">
+        <button class="btn btn-sm btn-primary" (click)="onUj()">Ok</button>
+        <button class="btn btn-sm btn-default" style="margin-left:3px;" (click)="onMegsem()">Mégsem</button>
+      </div>
+    </div>
+  </ng-container>
 
-  <p *ngIf="kikuldesikodidopontja !== ''">Ha új linket készít, a régi érvényessége megszűnik!</p>
+  <ng-container *ngIf="egymode === 2">
+    <div [@rowanimation]>
+      <app-tetel-torles [cim]="'Fotózás link'"
+                        (eventTorles)="onTorles($event)">
+      </app-tetel-torles>
+    </div>
+  </ng-container>
 </div>
