--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -22,28 +22,28 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
+      <ng-container *ngIf="bbmode === 1">
       <div>
-        <nav>
-          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(1)" class="toolbutton">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
           <button [disabled]=" !jog || !nyitva"
-                  (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+                  (click)="doNav(2)" class="toolbutton">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
           <button [disabled]="!jog || !nyitva"
-                  (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+                  (click)="doNav(3)" class="toolbutton">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
 
-          <button (click)="doNav(13)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(13)" class="toolbutton">
             Pénztártételek
           </button>
-          <button (click)="doNav(14)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(14)" class="toolbutton">
             Export
           </button>
-        </nav>
-      </div>
+        </div>
+      </ng-container>
 
 
       <ng-container *ngIf="egymode === 1">
