--- a/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-list/ajanlatkeres-list.component.html
@@ -16,16 +16,16 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
-        <nav>
-          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            <i class="fa fa-file" aria-hidden="true"></i>
-          </button>
-          <button (click)="doNav(8)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            Projekt
-          </button>
-        </nav>
-      </div>
+      <ng-container *ngIf="bbmode === 1">
+        <div>
+            <button (click)="doNav(1)" class="toolbutton">
+              <i class="fa fa-file" aria-hidden="true"></i>
+            </button>
+            <button (click)="doNav(8)" class="toolbutton">
+              Projekt
+            </button>
+        </div>
+      </ng-container>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
