--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -35,50 +35,49 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
-        <nav>
-          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <ng-container *ngIf="bbmode === 1">
+        <div>
+          <button (click)="doNav(1)" class="toolbutton">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="!mod" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!mod" (click)="doNav(2)" class="toolbutton">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="!mod" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!mod" (click)="doNav(3)" class="toolbutton">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="!mod" (click)="doNav(19)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!mod" (click)="doNav(19)" class="toolbutton">
             Stsz
           </button>
-          <button [disabled]="!mod" (click)="doNav(20)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!mod" (click)="doNav(20)" class="toolbutton">
             Műszaki állapot
           </button>
-          <button [disabled]="!mod" (click)="doNav(21)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!mod" (click)="doNav(21)" class="toolbutton">
             Inverter
           </button>
-          <button [disabled]="!mod" (click)="doNav(22)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!mod" (click)="doNav(22)" class="toolbutton">
             Napelem
           </button>
-          <button [disabled]="!mod" (click)="doNav(27)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!mod" (click)="doNav(27)" class="toolbutton">
             Dátumok
           </button>
-          <button (click)="doNav(24)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(24)" class="toolbutton">
             Bizonylat és irat
           </button>
-          <button (click)="doNav(23)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(23)" class="toolbutton">
             Iratminta
           </button>
-          <button (click)="doNav(26)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(26)" class="toolbutton">
             Jegyzet
           </button>
-          <button (click)="doNav(25)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(25)" class="toolbutton">
             Számlázási rend
           </button>
-        </nav>
-      </div>
-
+        </div>
+      </ng-container>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
